**********************************************************************************

#### CrossApp 1.1.6 更新内容：  

#####1.新增CAFlashView，支持播放.swf后缀的flash文件
目前暂无播放声音功能，且仅支持32位系统

#####2.新增新版demo
新版demo有2大模块：基础控件展示模块与简易版仿新浪新闻客户端模块

#####3.修复CATextField在iOS7上弹出键盘卡死的bug

#####4.优化CAProgress接口

#####5.优化截屏功能

#####6.修改WebView的loading

#####7.优化CATextField体验

#####8.优化CATextView体验


**********************************************************************************

#### CrossApp 1.1.5 更新内容：  

#####1.优化CATextField

#####2.CATextView增加选择、复制、粘贴等功能。

#####3.优化CANavigationController
增加隐藏某个视图管理器所对应的CANavigationBar的功能

#####4.解决CATextField在索尼、华为等预输入的bug

#####5.修复文字在多行情况有偏差的bug

#####6.修复CAWebView在android平台会崩溃的bug

#####7.优化android物理返回键与屏幕触摸屏蔽的关联

#####8.优化触摸事件屏幕功能

#####9.其他一些细节的修改


#### CrossApp 1.1.5 Update:  

#####1. Optimized CATextField
#####2. Added select, copy, paste and other functionalities in CATextView
#####3. Optimized CANavigationController
Added functionality that user can hide the corresponding CANavigationBar of a view controller
#####4. Fixed CATextField's preinput bug existed in Sony, Huawei and other mobile types
#####5. Fixed bug that characters have deviation in multi-line conditions
#####6. Fixed CAWebView's breakdown bug in Android platform
#####7. Optimized the connection between Android physical back button and screen touch shielding
#####8. Optimized touch event screen functionality
#####9. Other details tweaking


**********************************************************************************

#### CrossApp 1.1.4 更新内容：  

#####1.在动画系统中，增加删除某个动画模块功能

#####2.优化scrollView指示器

#####3.优化CAScheduler

#####4.优化CASwitch默认效果

#####5.增加CAImage对Gif的支持

#####6.增加CALabel复制内容到系统粘贴板的功能

#####7.增加CATextField节选并复制内容到系统粘贴板，粘贴系统粘贴板内容的功能

#####8.修复CAWebView由于CAImage改动造成的bug

#####9.完善CATextView/CATextField之间的输入法切换

#####10.修复截屏并保存图片功能的bug

#####11.新建工程支持iphone6 以上设备分辨率

#####12.完善iOS平台icon

#####13.其他一些细节的修改


#### CrossApp 1. 1. 4 Update:  