@@ -65,6 +65,7 @@ bool CATextView::resignFirstResponder()
 	{
 		detachWithIME();
 		hideCursorMark();
+        m_pTextSelView->hideTextSelView();
 	}
 	return result;
 }
@@ -87,7 +88,6 @@ bool CATextView::init()
 		return false;
 	}
     this->setColor(CAColor_clear);
-    
 	m_pContainerView = CAScrollView::createWithFrame(CCRectZero);
 	m_pContainerView->setShowsHorizontalScrollIndicator(false);
 	m_pContainerView->setTouchMovedListenHorizontal(false);
@@ -438,31 +438,46 @@ void CATextView::AndroidWillInsertText(int start, const char* str, int before, i
     CCAssert(str != NULL, "");
     CCAssert(count > 0, "");
     
+    
     for (int i=0; i<before; i++)
     {
-    //    deleteBackward();
+        if (m_iCurPos == 0 || m_szText.empty())
+            break;
+        
+        int nDeleteLen = 1;
+        while (0x80 == (0xC0 & m_szText.at(m_iCurPos - nDeleteLen)))
+        {
+            ++nDeleteLen;
+        }
+        m_szText.erase(m_iCurPos - nDeleteLen, nDeleteLen);
+        m_iCurPos -= nDeleteLen;
     }
+    updateImage();
     CC_RETURN_IF(str == NULL || count <= 0);
     
     std::string s = str;
-    insertText(s.c_str(), s.length());
+    m_szText.insert(m_iCurPos, s.c_str(), s.length());
+    m_iCurPos += s.length();
+    updateImage();
 }
 
 void CATextView::deleteBackward()
 {
-	if (m_iCurPos == 0 || m_szText.empty())
-		return;
+    CC_RETURN_IF(m_iCurPos == 0 || m_szText.empty());
 	CC_RETURN_IF(m_pTextViewDelegate && m_pTextViewDelegate->onTextViewDeleteBackward(this, m_szText.c_str(), (int)m_szText.length()));
-	if (execCurSelCharRange())
-		return;
-	int nDeleteLen = 1;
-	while (0x80 == (0xC0 & m_szText.at(m_iCurPos - nDeleteLen)))
-	{
-		++nDeleteLen;
-	}
+    CC_RETURN_IF(execCurSelCharRange());
 
+	int nDeleteLen = 1;
+    while (1)
+    {
+        CC_BREAK_IF(m_iCurPos - nDeleteLen < 0);
+        CC_BREAK_IF(0x80 != (0xC0 & m_szText.at(m_iCurPos - nDeleteLen)));
+        ++nDeleteLen;
+    }
+    m_iCurPos = MAX(m_iCurPos, nDeleteLen);
 	m_szText.erase(m_iCurPos - nDeleteLen, nDeleteLen);
 	m_iCurPos -= nDeleteLen;
+    
 	updateImage();
 	m_pTextArrView->hideTextArrView();
 }
@@ -681,6 +696,20 @@ void CATextView::ccTouchMoved(CATouch *pTouch, CAEvent *pEvent)
 	CATouchView::ccTouchMoved(pTouch, pEvent);
 }
 
+int getStringCharCount(const std::string &var)
+{
+    int count = 0;
+    for (std::string::size_type i = 0; i < var.size(); i++)
+    {
+        if (var[i] < 0 || var[i]>127)
+        {
+            i += 2;
+        }
+        count++;
+    }
+    return count;
+}
+
 void CATextView::ccTouchEnded(CATouch *pTouch, CAEvent *pEvent)
 {
     if (CATextToolBarView::isTextToolBarShow())
@@ -694,32 +723,33 @@ void CATextView::ccTouchEnded(CATouch *pTouch, CAEvent *pEvent)
     
 	CCPoint point = this->convertTouchToNodeSpace(pTouch);
 
-	if (this->getBounds().containsPoint(point))
-	{
-		becomeFirstResponder();
-		if (isFirstResponder() && !m_pTextSelView->isTextViewShow())
-		{
-            this->showCursorMark();
-
-			int iCurLine = 0; int iCurPosX = 0;
-			calculateSelChars(point, iCurLine, iCurPosX, m_iCurPos);
-			m_pCursorMark->setCenterOrigin(CCPoint(iCurPosX, m_iLineHeight*1.25f*iCurLine + m_iLineHeight / 2));
-
+    if (this->getBounds().containsPoint(point))
+    {
+        if (canAttachWithIME() && !m_pTextSelView->isTextViewShow())
+        {
+            becomeFirstResponder();
+            
+            int iCurLine = 0; int iCurPosX = 0;
+            calculateSelChars(point, iCurLine, iCurPosX, m_iCurPos);
+            m_pCursorMark->setCenterOrigin(CCPoint(iCurPosX, m_iLineHeight*1.25f*iCurLine + m_iLineHeight / 2));
+            
             CCPoint pt = m_pCursorMark->getCenterOrigin();
             m_pTextArrView->showTextArrView(CCPoint(pt.x, pt.y + m_iLineHeight*1.2f + m_pContainerView->getContentOffset().y));
             m_curSelCharRange = std::pair<int,int>(m_iCurPos, m_iCurPos);
-		}
-	}
-	else
-	{
-		m_pTextArrView->hideTextArrView();
-		m_pTextSelView->hideTextSelView();
-
-		if (resignFirstResponder())
-		{
-            this->hideCursorMark();
-		}
-	}
+            
+#if CC_TARGET_PLATFORM==CC_PLATFORM_ANDROID
+            CCEGLView * pGlView = CAApplication::getApplication()->getOpenGLView();
+            pGlView->setIMECursorPos(getStringCharCount(m_szText), getContentText());
+#endif
+        }
+    }
+    else
+    {
+        if (canDetachWithIME())
+        {
+            resignFirstResponder();
+        }
+    }
 
 	CATouchView::ccTouchEnded(pTouch, pEvent);
 }
@@ -828,7 +858,7 @@ void CATextView::cursorMoveBackward()
 	if (m_iCurPos == 0 || m_szText.empty())
 		return;
 
-	int iPrevPos = (int)m_iCurPos, nMoveLen = 1;
+	int nMoveLen = 1;
 	while (0x80 == (0xC0 & m_szText.at(m_iCurPos - nMoveLen)))
 	{
 		++nMoveLen;
@@ -844,7 +874,7 @@ void CATextView::cursorMoveForward()
 	if (m_iCurPos == m_szText.length() || m_szText.empty())
 		return;
 
-	int iPrevPos = (int)m_iCurPos, nMoveLen = 1;
+	int nMoveLen = 1;
 	for (std::string::size_type n = m_iCurPos + nMoveLen; n < m_szText.length() && 0x80 == (0xC0 & m_szText.at(n));)
 	{
 		++nMoveLen;
