@@ -20,6 +20,11 @@
 
 #####8.优化CATextView体验
 
+#####9.修复CATextView在某些android系统上中文输入错误的bug
+
+#####10.修复剪切板没有内容时CATextField和CATextView长按报错的bug
+
+#####11.其他一些细节的修改
 
 **********************************************************************************
 
